--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* width: 100vh; */
+  height: 100vh;
+  overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
